fix: add a link to the css and made a few small markup adjustments

--- a/JS for Web Developers book/01-guessing-game/guessing-game.html
+++ b/JS for Web Developers book/01-guessing-game/guessing-game.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Title -->
     <title>Guessing Game</title>
+    <!-- CSS -->
+    <link rel="stylesheet" href="styles/style.css" />
     <!-- JS -->
     <script
       type="text/javascript"
@@ -19,6 +21,6 @@
     ></script>
   </head>
   <body>
-    <div id="startgame"></div>
+    <button id="startgame" class="startgame">Start Game</button>
   </body>
 </html>
