fix: Add the type: button and correct the error

--- a/JS for Web Developers book/01-guessing-game/guessing-game.html
+++ b/JS for Web Developers book/01-guessing-game/guessing-game.html
@@ -21,6 +21,6 @@
     ></script>
   </head>
   <body>
-    <button id="startgame" class="startgame">Start Game</button>
+    <button type="button" id="startgame" class="startgame">Start Game</button>
   </body>
 </html>
