feat: Add markup for the project

--- a/JS for Web Developers book/02-slide-show/index.html
+++ b/JS for Web Developers book/02-slide-show/index.html
@@ -25,5 +25,17 @@
     <header>
       <p class="header-title">JavaScript 101</p>
     </header>
+    <main>
+      <h1>Slide Show</h1>
+      <div class="slides">
+        <img
+          src=""
+          width="640"
+          height="480"
+          alt="Missing image"
+          title="Missing image"
+        />
+      </div>
+    </main>
   </body>
 </html>
