feat: Example to showcase how vertical-align works

--- a/experiments/01-vertical-align/index.html
+++ b/experiments/01-vertical-align/index.html
@@ -3,7 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vertical Align</title>
+    <title>Vertical Align Example</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <p class="text">
+      Normal text
+      <span class="middle">middle</span>
+      <span class="baseline">baseline</span>
+      <span class="sub">subscript</span>
+      <span class="super">superscript</span>
+      <span class="top">top</span>
+      <span class="middle">middle</span>
+      <span class="bottom">bottom</span>
+    </p>
+  </body>
 </html>
