feat: Modify some stylings

--- a/100-js-projects/01-dropdown-menu/index.html
+++ b/100-js-projects/01-dropdown-menu/index.html
@@ -21,7 +21,7 @@
         <i class="fa-solid fa-caret-down dropdown__carot"></i>
       </div>
       <div class="dropdown__menu">
-        <ul class="menu menu--1-columns menu--list">
+        <ul class="menu menu--select-item">
           <li class="menu-item menu-item--icon-text">
             <i class="fa-brands fa-facebook icon"></i>
             <span class="menu-item__word">Facebook</span>
