--- a/css-in-depth/16-animations/02-page/index.html
+++ b/css-in-depth/16-animations/02-page/index.html
@@ -52,7 +52,7 @@
         </p>
         <p>This Austra White is our most prolific producer.</p>
       </div>
-      <div class="grid__item card">
+      <div class="flyin-grid__item grid__item card">
         <img src="images/chicken2.jpg" alt="a chicken" />
         <h4>Hen Solo</h4>
         <p>
@@ -66,7 +66,7 @@
           full dozen of her eggs costs an additional $2.
         </p>
       </div>
-      <div class="grid__item card">
+      <div class="flyin-grid__item grid__item card">
         <img src="images/chicken3.jpg" alt="a chicken" />
         <h4>Cluck Norris</h4>
         <p>
@@ -81,7 +81,7 @@
           laying through the coldest parts of the winter.
         </p>
       </div>
-      <div class="grid__item card">
+      <div class="flyin-grid__item grid__item card">
         <img src="images/chicken4.jpg" alt="a chicken" />
         <h4>Peggy Schuyler</h4>
         <p>
